Applying changes from personal review